<resources>
    <string name="app_name">FoodCare</string>
    <string name="main_search_hint">搜索菜品或食材</string>
    <string name="today_detail_date">%d年%d月%d日</string>
    <string name="today_recommended">推荐摄入总量    %d</string>
    <string name="today_intake">今日摄入能量    %d</string>
    <string name="today_sport">今日运动消耗    %d</string>
    <string name="today_left">今日剩余可摄入  %d</string>
    <string name="title_activity_today_analyse">TodayAnalyse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="oldIP">http://192.168.137.238:8080/foodcare/</string>
    <string name="IP">http://192.168.137.166:8080/foodcare/</string>
</resources>
