<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/shape_corner">
        <ImageView
            android:id="@+id/image_login"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/username_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:background="#EEEEEE"
            android:hint="@string/prompt_email"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:singleLine="true"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/shape_corner">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/password_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="center"
            android:background="#EEEEEE"
            android:hint="@string/prompt_password"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            android:imeActionLabel="@string/action_sign_in_short"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:singleLine="true"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="7dp"
            android:layout_marginRight="70dp"
            android:background="#FFFFFFFF"
            android:text="没有账号 点击注册"
            android:textColor="#0000CD"
            android:textSize="10dp" />

        <CheckBox
            android:id="@+id/checkBox_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="-3dp"
            android:checked="true"
            android:text="记住密码"
            android:textSize="12dp"
            android:buttonTint="@color/mainColor1"
            />
    </RelativeLayout>


    <pl.droidsonroids.gif.GifTextView
        android:id="@+id/login_login"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="登陆"
        android:gravity="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/login"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</LinearLayout>